--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
   padding: 0;
   box-sizing: border-box;
 }
+html{
+  font-size: 62.5% ;
+}
 .container{
   width: 100%;
   min-height: 100vh;
@@ -23,12 +26,12 @@ nav{
 nav ul li{
   list-style: none;
   display: inline-block;
-  margin-left: 30px;
+  margin-left: 3rem;
 }
 nav ul li a{
   text-decoration: none;
   color:white;
-  font-size: 20px;
+  font-size: 2rem;
 }
 nav ul li a:hover{
   background-color: #ff5ea2;
@@ -36,8 +39,8 @@ nav ul li a:hover{
 .heading-1{
   flex-basis: 40%;
   position: relative;
-  margin-left: 50px;
-  padding-top: 150px;
+  margin-left: 5rem;
+  padding-top: 15rem;
 }
 .heading{
   display: flex;
@@ -45,40 +48,40 @@ nav ul li a:hover{
   align-items: center;
 }
 .heading-1 h1{
-  font-size: 54px;
+  font-size: 5rem;
   font-weight: 500;
   color: white;
  
 }
 button{
-  width: 140px;
+  width: 14rem;
   border: 0;
-  padding: 12px 10px;
+  padding: 1.2rem 1.0rem;
   margin-top: 5%;
   outline: none;
   color: #fff;
   background:linear-gradient(to right, #fb5282 ,#ff3527);
-  border-radius: 10px;
+  border-radius: 1.0rem;
   cursor: pointer;
   transition: width 0.5s;
 }
 button:hover{
-  width: 160px;
+  width: 16.0rem;
 
 }
 .heading-2 img{
-  width: 75%;
+  width: 70rem;
   position: relative;
-  padding-left: 120px;
-  padding-top: 5%;
+  padding-left: 12.0rem;
+  padding-top: 3rem;
 } 
 .players{
   display: grid;
   grid-template-columns: repeat(3,1fr);
 }
 .player{
-  padding: 20px;
-  margin: 10px;
+  padding: 2.0rem;
+  margin: 1.0rem;
 }
 .player img{
   width: 75%;
@@ -93,41 +96,58 @@ button:hover{
   display: flex;
 }
 .article-1{
-  flex-basis: 40%;
+  flex-basis: 68rem;
   position: relative;
-  margin-left: 50px;
-  padding-top: 150px;
+  margin-left: 5rem;
+  padding-top: 15.0rem;
 } 
 .article-1 h1{
-  font-size: 50px;
+  font-size: 5.0rem;
   font-weight: 500;
-  margin-bottom: 5%;
+  margin-bottom: 5rem;
 }
 .article-2 img{
-  width: 75%;
+  width: 65rem;
   position: relative;
-  padding-left: 120px;
-  padding-top: 20%;
+  padding-left: 12.0rem;
+  padding-top: 5rem;
 }
 .logo{
 text-align: center;
 }
 .logo img{
- width: 300px;
+ width: 30rem;
 }
 
 footer{
-  height: 100px;
-  margin-top: 20px;
+  height: 10rem;
+  margin-top: 2rem;
 }
 
 .social-icon{
   text-align: center;
-  font-size: 30px;
-  padding: 10px;
+  font-size: 3rem;
+  padding: 1rem;
 }
 
 .copyright{
   
   text-align: center;
+}
+
+@media(max-width:998px){
+  html{
+    font-size: 55%;
+  }
+}
+
+@media(max-width:768px){
+  html{
+    font-size: 45%;
+  }
+}
+@media(max-width:375px){
+  html{
+    font-size: 21%;
+  }
 }
